--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@ng-select/ng-select": "^14.7.0",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.6",
+    "bootstrap-icons": "^1.13.1",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
     "luxon": "^3.6.1",
+    "ng2-pdf-viewer": "^10.4.0",
     "pdf-lib": "^1.17.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
