--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.6",
     "bootstrap-icons": "^1.13.1",
+    "file-saver": "^2.0.5",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
     "luxon": "^3.6.1",
@@ -35,6 +36,7 @@
     "@angular/cli": "^19.2.3",
     "@angular/compiler-cli": "^19.2.0",
     "@angular/localize": "^19.2.0",
+    "@types/file-saver": "^2.0.7",
     "@types/jasmine": "~5.1.0",
     "@types/luxon": "^3.6.2",
     "jasmine-core": "~5.6.0",
